# droidRealtimeMidiTriggerProto001

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yourdomain/yourapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FileDevDumper.h  LockFreeQueue.h  MediaStreamer.h  OboePlayer.h  OboeRecorder.h  cpu.h  dsp.h  fft.h  fft_test.h  ffts.h  log.h  lse.h  mpm.h  native-lib.cpp  sandbox.h  util.h
app/src/main/java/com/yourdomain/yourapp/: MainActivity.java  MidiConstants.java  MidiTools.java  MidiWriter.java  SurfaceViewDSP.java  enums.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yourdomain/yourapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
simplefileexplorer/: build.gradle
simplefileexplorer/src/main/: AndroidManifest.xml
